# affine

./: .libcst.codemod.yaml  .pre-commit-config.yaml  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
affine/: __init__.py
affine/tests/: test_pickle.py  test_rotation.py  test_transform.py
